<resources>
    <string name="app_name">स्कैन</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
<string-array name="city_name">
    <item>FATEHPUR</item>
</string-array>
    <string-array name="india_states">


































        <item>Uttar Pradesh</item>


</string-array>
    <string name="entry_java_title">Java</string>
    <string name="entry_java_subtitle">Run the MLKit Showcase written in Java.</string>
    <string name="entry_kotlin_title">Kotlin</string>
    <string name="entry_kotlin_subtitle">Run the MLKit Showcase written in Kotlin.</string>
    <string name="mode_odt_live_title">Object Detection: Live Camera</string>
    <string name="mode_odt_live_subtitle">A device’s live camera can be used to detect objects in an environment.</string>
    <string name="mode_odt_static_title">Object Detection: Static Image</string>
    <string name="mode_odt_static_subtitle">One or more objects can be detected from a provided image.</string>
    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
    <string name="settings_title">MLKit Showcase Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search object</string>
    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>
    <string name="static_image_prompt_detected_no_results">No results found</string>
    <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_card_no_result_subtitle">Support text place holder</string>
    <string name="static_image_preview_card_subtitle">+%d more results</string>
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="my_account">My Account</string>
    <string name="city">City*</string>
    <string name="till_20th_oct_2019">till 20th,Oct 2019</string>
    <string name="get_30_off_at_any_product_abobe_rs_300_and_below_rs_2000">Get 30% off at any product abobe Rs.300/- and below Rs.2000/-.</string>
    <string name="house_no_building_name">House No., Building name*</string>
    <string name="road_name_area_street">Road name, Area, Street*</string>
    <string name="pincode">Pincode*</string>
    <string name="landmark_optional">Landmark(Optional)</string>
    <string name="name">Name*</string>
    <string name="alternate_mobile_no_optional">Alternate Mobile No. (Optional)</string>
    <string name="save">Save</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="deliver_here">Deliver here</string>
    <string name="verification_code_has_been_sent_to_917600001265">Verification code has been sent to +917600001265</string>
    <string name="sign_in">Sign in</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">Buy now</string>
    <string name="product_not_found">Product not found.</string>
    <string name="search_for_product">Search for product</string>
    <string name="user_info">User Info</string>
    <string name="apply_your_coupen_here">Apply your coupen here.</string>
    <string name="redeem">Redeem</string>
    <string name="remove_item">Remove item</string>
    <string name="price_details">Price details</string>
    <string name="delivery">Delivery</string>
    <string name="your_coupen">Your Coupen</string>
    <string name="original_price">Original Price</string>
    <string name="final_price_after_coupen_redeemption">Final price after coupen redeemption</string>
    <string name="make_sure_to_apply_this_coupen_in_your_cart">Make sure to apply this coupen in your cart*</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="retry">Retry</string>
    <string name="sign_out">Sign out</string>
    <string name="total_amount">Total amount</string>
    <string name="continuee">continue</string>
    <string name="change_photo">Change Photo</string>
    <string name="email_address">Email address</string>
    <string name="update">Update</string>
    <string name="view_all">View all</string>
    <string name="loadng">Loadng...</string>
    <string name="coupen">Coupen</string>
    <string name="tap_the_icon_">Tap the icon on the right corner to select your coupen.</string>
    <string name="my_addresses">My Addresses</string>
    <string name="your_ratings">Your ratings</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="phone_number">Phone Number</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure , You want to cancel the order ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_order_has_been_placed">Your order has been placed.</string>
    <string name="your_order_has_been_packed">Your order has been packed.</string>
    <string name="your_order_has_been_shipped">Your order has been shipped.</string>
    <string name="your_order_has_been_delivered">Your order has been delivered.</string>
    <string name="cancel_order">Cancel order</string>
    <string name="current_order_status">Current order status</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="other_details">Other details</string>
    <string name="product_details">Product Details</string>
    <string name="check_price_after_coupen_redemption">Check price after coupen redemption</string>
    <string name="available">Available</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="ratings">Ratings</string>
    <string name="discount">Discount</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="cash_on_delivery_available">Cash on delivery available.</string>
    <string name="recent_orders">Recent orders</string>
    <string name="my_orders">My Orders</string>
    <string name="scan_on">Scan_on</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_rewards">My Rewards</string>
    <string name="message_no_locaion_permission_snackbar" >You have disabled the location permission.you will not be able to use this app untill you allow this permission . click on setting button and and allow Location permission manually</string>
    <string name="allow">Allow</string>
</resources>