<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateInfoFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        app:civ_border_color="@android:color/darker_gray"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/placeholder_circle_image" />

    <Button
        android:id="@+id/change_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:stateListAnimator="@null"
        android:text="@string/change_photo"
        android:textAllCaps="false"
        android:textColor="#0016E2"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <Button
        android:id="@+id/remove_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:stateListAnimator="@null"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textColor="@color/unsuccessred"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/change_photo_btn"
        app:layout_constraintStart_toStartOf="@+id/change_photo_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_btn" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:visibility="gone"
        android:backgroundTint="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/update"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/unsuccessred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>