<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/slider_background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddressActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout5"
                app:srcCompat="@mipmap/address" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/border_background"
                android:backgroundTint="@color/RecyclerViewBackground"/>




            <EditText
                android:id="@+id/flat_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/house_no_building_name"
                android:isScrollContainer="true"
                android:layout_marginTop="7dp"
                android:inputType="textMultiLine"
                android:lines="2"
                android:textColor="@color/successGreen" />

            <EditText
                android:id="@+id/locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/road_name_area_street"
                android:isScrollContainer="true"
                android:layout_marginTop="7dp"
                android:inputType="textMultiLine"
                android:lines="2"
                android:textColor="@color/successGreen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="1"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:textColor="@color/successGreen" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/state_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:backgroundTint="@color/RecyclerViewBackground"/>
            </LinearLayout>

            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/landmark_optional"
                android:layout_marginTop="7dp"
                android:inputType="textPersonName"
                android:textColor="@color/successGreen" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/successGreen" />

            <EditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="Mobile No.*"
                android:layout_marginTop="7dp"
                android:inputType="number"
                android:textColor="@color/successGreen" />

            <EditText
                android:id="@+id/alternate_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/alternate_mobile_no_optional"
                android:layout_marginTop="7dp"
                android:inputType="number"
                android:textColor="@color/successGreen" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/unsuccessred"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>